# thash

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
hashing-lib/: Cargo.toml
hashing-lib/src/: lib.rs
src/: main.rs  options.rs  program_options.rs
src/hasher/: generic.rs  k12_options.rs  mod.rs  tests.rs  traits.rs
src/hasher/options/: common.rs  k12_options.rs  mod.rs  traits.rs
src/hashing_lib/: internal.rs  mod.rs  sized_hasher.rs  unsized_hasher.rs
test-tools/: generate-hash.py  run-cmd-tests.sh
