[package]
name = "thash"
description = "A terminal program for hashing with many algorithms and many output formats, and recursive hashing support"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["TheQuantumPhysicist"]
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
strum = "0.26"
strum_macros = "0.26"

blake2 = "0.10"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
